Add Task, TaskForm and TaskList

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-direction: column;
+  margin: 2.5rem auto;
 }
 
-.App-link {
-  color: #61dafb;
+.task-app{
+  background-image: linear-gradient(90deg, var(--gray), var(--white));
+  width: 100%;
+  border: 3px solid var(--white);
+  border-radius: 3px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  height: auto;
+  margin: 2rem 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media (min-width: 768px){
+    .task-app {
+      width: 60rem;
+    }
+}
+
+.task-app__title {
+  text-align: center;
 }
